force-app/main/default/objects/Spread_Line_Item__c/Spread_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Canonical normalized spread line for one borrower document and fiscal period.</description>
    <label>Spread Line Item</label>
    <nameField>
        <label>Spread Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spread Line Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>