force-app/main/default/objects/Spread_Line_Item__c/fields/Final_Spread_Reference__c.field-meta.xml
<CustomField>
    <fullName>Final_Spread_Reference__c</fullName>
    <label>Final Spread Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>