force-app/main/default/objects/Spread_Line_Item__c/fields/Include_In_Report__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Report</label>
    <type>Checkbox</type>
</CustomField>