force-app/main/default/objects/Spread_Line_Item__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Material</label>
    <type>Checkbox</type>
</CustomField>