force-app/main/default/objects/Spread_Line_Item__c/fields/Pilot_Run__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pilot Run</label>
    <referenceTo>Spread_Pilot_Run__c</referenceTo>
    <relationshipLabel>Spread Line Items</relationshipLabel>
    <relationshipName>Spread_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>