force-app/main/default/objects/Spread_Line_Item__c/fields/Primary_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Primary_Evidence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Evidence</label>
    <referenceTo>Spread_Extraction_Evidence__c</referenceTo>
    <relationshipLabel>Spread Line Items</relationshipLabel>
    <relationshipName>Evidence_Spread_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>