force-app/main/default/objects/Spread_Line_Item__c/fields/Review_Note__c.field-meta.xml
<CustomField>
    <fullName>Review_Note__c</fullName>
    <label>Review Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>