force-app/main/default/objects/Spread_Line_Item__c/fields/Spread_Document__c.field-meta.xml
<CustomField>
    <fullName>Spread_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spread Document</label>
    <referenceTo>Spread_Document__c</referenceTo>
    <relationshipLabel>Spread Line Items</relationshipLabel>
    <relationshipName>Document_Spread_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>