force-app/main/default/objects/Spread_Line_Item__c/fields/Statement_Type__c.field-meta.xml
<CustomField>
    <fullName>Statement_Type__c</fullName>
    <label>Statement Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>